# python-navitia-client

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy_documentation.yaml  pre-commit_ci.yaml  pre-release.yaml  release.yaml  tests.yaml
docs/: few_tips.md
docs/api_support/: arrivals.md  commercial_modes.md  companies.md  contributors.md  coverage.md  datasets.md  departures.md  disruptions.md  inverted_geocoding.md  isochrones.md  journeys.md  line_reports.md  lines.md  networks.md  physical_modes.md  places.md  places_nearby.md  pt_objects.md  route_schedules.md  routes.md  stop_areas.md  stop_points.md  stop_schedules.md  terminus_schedules.md  traffic_reports.md  vehicle_journeys.md
navitia_client/: __init__.py  entities.py
navitia_client/client/: __init__.py  base_client.py  exceptions.py  navitia_client.py
navitia_client/entities/: __init__.py  address.py  administrative_region.py  arrival.py  base.py  company.py  context.py  contributor.py  coord.py  dataset.py  departure.py  direction.py  display_information.py  disruption.py  equipment.py  equipment_reports.py  isochrones.py  journey.py  line.py  line_and_route.py  line_report.py  link.py  network.py  note.py  others.py  pagination.py  path.py  pathway.py  physical_mode.py  place.py  pt_datetime.py  pt_object.py  public_transport.py  route.py  route_schedule.py  schedule_table.py  stop_area.py  stop_datetime.py  stop_schedule.py  street_network_object.py  (+4 more)
tests/: test_navitia_client.py
(+152 files in other folders)
