[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-navitia-client"
authors = [
    {name = "Jonathan Perron", email = "jonathan@perron.bzh"},
]
license = {text = "MIT License"}
description = "Python library to use with Navitia APIs"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
version = "1.1.3"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31, < 3",
]

[project.urls]
Source = "https://github.com/jonperron/python-navitia-client"

[project.readme]
file = "README.md"
content-type = "text/markdown"
